Adds multiple lines, wrapped in div since render can only return one line

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
       var App = React.createClass({
         render: function() {
-          return <h1>Hello World</h1>
+          return (
+          <div>
+            <b>BOLB</b>
+            <h1>Hello World</h1>
+            </div>
+          )
         }
       });
 
