--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       var App = React.createClass({
         getInitialState: function() {
           return {
-            txt: 'the state txt',
-            id: 0
+            txt: '',
           }
         },
         update: function(e) {
@@ -23,8 +22,18 @@
         render: function() {
           return (
           <div>
-            <input type="txt" onChange={this.update} />
-            <h1>{this.state.txt}</h1>
+            <Widget txt={this.state.txt} update={this.update} />
+          </div>
+          )
+        }
+      });
+
+      var Widget = React.createClass({
+        render: function() {
+          return (
+            <div>
+              <input type="txt" onChange={this.props.update} />
+              <h1>{this.props.txt}</h1>
             </div>
           )
         }
