--- a/index.html
+++ b/index.html
@@ -13,27 +13,37 @@
       var App = React.createClass({
         getInitialState: function() {
           return {
-            txt: '',
+            red: 0,
+            green: 0,
+            blue: 0
           }
         },
         update: function(e) {
-          this.setState({txt: e.target.value})
+          this.setState({
+            red: this.refs.red.refs.inp.getDOMNode().value,
+            green: this.refs.green.refs.inp.getDOMNode().value,
+            blue: this.refs.blue.refs.inp.getDOMNode().value
+          });
         },
         render: function() {
           return (
           <div>
-            <Widget txt={this.state.txt} update={this.update} />
+            <Slider ref="red" update={this.update} />
+            <label>{this.state.red}</label>
+            <Slider ref="green" update={this.update} />
+            <label>{this.state.green}</label>
+            <Slider ref="blue" update={this.update} />
+            <label>{this.state.blue}</label>
           </div>
           )
         }
       });
 
-      var Widget = React.createClass({
+      var Slider = React.createClass({
         render: function() {
           return (
             <div>
-              <input type="txt" onChange={this.props.update} />
-              <h1>{this.props.txt}</h1>
+              <input ref="inp" type="range" min="0" max="255" onChange={this.props.update} />
             </div>
           )
         }
